WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70310
[EFL] Added missing dummy platformDescription function
https://bugs.webkit.org/show_bug.cgi?id=70310
Summary
[EFL] Added missing dummy platformDescription function
Tomasz Morawski
Reported
2011-10-17 23:51:38 PDT
Added dummy platformDescription function needed to compile WK2.
Attachments
Patch
(1.35 KB, patch)
2011-10-17 23:53 PDT
,
Tomasz Morawski
no flags
Details
Formatted Diff
Diff
Patch 2
(1.22 KB, patch)
2011-10-18 00:33 PDT
,
Tomasz Morawski
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tomasz Morawski
Comment 1
2011-10-17 23:53:23 PDT
Created
attachment 111395
[details]
Patch
Gyuyoung Kim
Comment 2
2011-10-18 00:24:12 PDT
Comment on
attachment 111395
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111395&action=review
> Source/WebCore/platform/efl/ContextMenuEfl.cpp:23 > +
Why do you add an empty line to here?
> Source/WebCore/platform/efl/ContextMenuEfl.cpp:52 > +
It looks unneeded an empty line.
Tomasz Morawski
Comment 3
2011-10-18 00:33:22 PDT
Created
attachment 111402
[details]
Patch 2
Gyuyoung Kim
Comment 4
2011-10-18 00:38:21 PDT
Comment on
attachment 111402
[details]
Patch 2 LGTM.
Leandro Pereira
Comment 5
2011-10-18 06:28:48 PDT
Comment on
attachment 111402
[details]
Patch 2 LGTM.
WebKit Review Bot
Comment 6
2011-10-19 00:17:07 PDT
Comment on
attachment 111402
[details]
Patch 2 Clearing flags on attachment: 111402 Committed
r97837
: <
http://trac.webkit.org/changeset/97837
>
WebKit Review Bot
Comment 7
2011-10-19 00:17:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug