[EFL] Added missing dummy platformDescription function https://bugs.webkit.org/show_bug.cgi?id=70310

Patch by Tomasz Morawski <t.morawski@samsung.com> on 2011-10-19
Reviewed by Ryosuke Niwa.

Added dummy platformDescription function needed to compile WK2.

* platform/efl/ContextMenuEfl.cpp:
(WebCore::ContextMenu::platformDescription):

Canonical link: https://commits.webkit.org/86552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97837 268f45cc-cd09-0410-ab3c-d52691b4dbfc